k8s/backoffice.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: backoffice-app
  namespace: default
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: backoffice-app
    spec:
      volumes:
      - name: data
        emptyDir: {}
      containers:
      - name: backoffice
        image: trailerflix/backoffice
        ports:
        - containerPort: 8001
        volumeMounts:
        - name: data
          mountPath: /var/lib/backoffice-app/
---
apiVersion: v1
kind: Service
metadata:
  name: backoffice-app
  namespace: default
spec:
  selector:
    app: backoffice-app
  ports:
  - port: 8081
