k8s/front-end.yml
apiVersion: v1
kind: Deployment
metadata:
  name: frontend-app
  namespace: default
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: frontend-app
    spec:
      volumes:
      - name: data
        emptyDir: {}
      containers:
      - name: frontend
        image: trailerflix/frontend
        ports:
        - containerPort: 8001
        volumeMounts:
        - name: data
          mountPath: /var/lib/frontend-app/
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-app
  namespace: default
spec:
  selector:
    app: frontend-app
  ports:
  - port: 8001
