k8s/rabbitmq.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: rabbitmq
  namespace: default
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      volumes:
      - name: data
        emptyDir: {}
      containers:
      - name: rabbitmq
        image: rabbitmq:3-management
        ports:
        - containerPort: 5672 # port for the daemon API
          name: daemon-api
        - containerPort: 15672 # port for the RabbitMQ management interface
          name: management
        volumeMounts:
        - name: data
          mountPath: /var/lib/rabbitmq/
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  namespace: default
spec:
  selector:
    app: rabbitmq
  ports:
    - port: 5672 # port for the daemon API
      name: daemon-api
    - port: 15672 # port for the RabbitMQ management interface
      name: management
