k8s/wishlist.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: wishlist-app
  namespace: default
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: wishlist-app
    spec:
      volumes:
      - name: data
        emptyDir: {}
      containers:
      - name: wishlist
        image: trailerflix/wishlist
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: data
          mountPath: /var/lib/wishlist-app/
---
apiVersion: v1
kind: Service
metadata:
  name: wishlist-app
  namespace: default
spec:
  selector:
    app: wishlist-app
  ports:
  - port: 8000
